# a-fine-disregard-for-awkward-facts

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
disregard/: either.py  maybe.py
tests/: test_either.py  test_maybe.py
