[tool.poetry]
name = "disregard"
version = "0.1.0"
description = ""
authors = ["Luís Rodrigues <hello@goblindegook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-watch = "^4.2.0"
black = "^21.5b1"
hypothesis = "^6.13.1"
mypy = "^0.812"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
